objects/CRMforNonProfit__Year_and_Template_Assigment__mdt.object
<CustomObject>
    <description>object to store pairs of years and used templates for self service certificate generation.</description>
    <fields>
        <fullName>CRMforNonProfit__Email_Template__c</fullName>
        <inlineHelpText>Please insert API Name of the email template that will be used for self service email message.</inlineHelpText>
        <label>Email Template</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__PDF_Template__c</fullName>
        <inlineHelpText>Please insert API Name of the pdf template that will be used for self service pdf document.</inlineHelpText>
        <label>PDF Template</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Year__c</fullName>
        <inlineHelpText>Please add year... only numbers</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Year and Template Assigment</label>
    <pluralLabel>Year and Template Assigments</pluralLabel>
</CustomObject>